tests/ext/invalid/Ensures_Invalid_1.whiley


int g(int y) requires y >= 0, ensures $ > 0:
    return y

int f(int y) requires y > 0, ensures $ >= 0:
    return g(y)
